Adicionei dois textos

--- a/Site_Exemplo/index.html
+++ b/Site_Exemplo/index.html
@@ -60,6 +60,8 @@
     <h1>Bem vindo ao meu site</h1>
     <hr>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, cupiditate et exercitationem soluta, explicabo sequi voluptates laudantium cum pariatur, illum veritatis modi nobis. Mollitia reprehenderit vitae, porro cum quis atque!</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis rerum maxime tenetur sed ea temporibus pariatur qui a eveniet perspiciatis consectetur, mollitia, aut quam debitis magnam adipisci. Autem, quia perspiciatis.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus eius corrupti rem expedita sunt enim nostrum, rerum eos. Consequatur quia quis suscipit omnis odit accusantium libero laboriosam mollitia alias animi.</p>
 
     <h2>Cadastre-se</h2>
 
